mongodb connected and user-autentcation data base created

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-node_modules/
+
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/user-authentication
+MONGODB_URI=mongodb+srv://sudheer:vasanthi1@cluster0.3v45a.mongodb.net/user-authentication?retryWrites=true&w=majority
 JWT_SECRET=mysecretkey
