--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "user authentication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "save": "^2.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
