updated .env, index.js and routes

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-
 PORT=3000
-MONGODB_URI=mongodb+srv://sudheer:vasanthi1@cluster0.3v45a.mongodb.net/user-authentication?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://sudheer:vasanthi1@cluster0.3v45a.mongodb.net/user-authentication?retryWrites=true&w=majority
 JWT_SECRET=mysecretkey
